change ResponseSkuDTO should have ResponseImageDto instead of just string of image